--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "description": "+ fix load film ở trang home                    => done\r + fix resize image film theo kích thước cửa sổ  => done\r + fix tên film dài đổi thành ...                => done",
     "main": "app.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node app.js"
     },
     "repository": {
         "type": "git"
