--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -33,7 +33,7 @@
     "nexmo": "^2.4.1",
     "nodejs": "0.0.0",
     "nodemailer": "^6.2.1",
-    "nodemon": "^1.19.1",
+    "nodemon": "^1.19.4",
     "pg": "^7.11.0",
     "sequelize": "^5.8.7",
     "winston": "^3.2.1",
