--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
   "dependencies": {
     "bcrypt": "^3.0.8",
     "body-parser": "^1.19.0",
+    "cookie-session": "^1.4.0",
     "ejs": "^2.6.1",
     "ejs-lint": "^0.3.0",
     "es2015": "0.0.0",
     "express": "^4.17.0",
     "express-promise-router": "^3.0.3",
-    "express-session": "^1.16.1",
     "formidable": "^1.2.1",
     "jsdom": "^15.1.1",
     "long-stack-traces": "^0.1.2",
