--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express-promise-router": "^3.0.3",
     "formidable": "^1.2.1",
     "fs": "0.0.1-security",
+    "fs.promises": "^0.1.2",
     "jsdom": "^15.1.1",
     "long-stack-traces": "^0.1.2",
     "multer": "^1.4.2",
