--- a/package.json
+++ b/package.json
@@ -5,18 +5,18 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/HuynhTri0811/DoAnCuoiKiWeb2.git"
+    "url": "https://github.com/PhanDuyen1603/NodeJS-Cinema-Booking"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/HuynhTri0811/DoAnCuoiKiWeb2/issues"
+    "url": "https://github.com/PhanDuyen1603/NodeJS-Cinema-Booking"
   },
-  "homepage": "https://github.com/HuynhTri0811/DoAnCuoiKiWeb2#readme",
+  "homepage": "https://github.com/PhanDuyen1603/NodeJS-Cinema-Booking",
   "dependencies": {
     "bcrypt": "^3.0.8",
     "body-parser": "^1.19.0",
